--- a/EasyLearn/UI/CustomControls/AvailableRelationView.xaml
+++ b/EasyLearn/UI/CustomControls/AvailableRelationView.xaml
@@ -4,9 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EasyLearn.UI.CustomControls"
+             xmlns:materialdesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
-    <TextBlock Margin="10" Text="{Binding English}"/>
+    <materialdesign:Chip Margin="10 0 0 0" Content="{Binding English}"/>
 
 </UserControl>
