--- a/EasyLearn/UI/CustomControls/VerbPrepositionView.xaml
+++ b/EasyLearn/UI/CustomControls/VerbPrepositionView.xaml
@@ -2,30 +2,61 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:EasyLearn.UI.CustomControls"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:converters="clr-namespace:EasyLearn.Infrastructure.ValueConverters"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <materialDesign:Card Margin="4" Height="100" Width="200">
+    <materialDesign:Card UniformCornerRadius="16" Margin="6" materialDesign:ShadowAssist.ShadowDepth="Depth1" Height="{Binding CardHeight}" VerticalAlignment="Top">
         <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition Width="0.4*"/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition Height="0.3*"/>
-                <RowDefinition/>
+                <RowDefinition Height="45"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="0" Grid.Column="0" Style="{DynamicResource MaterialDesignBody2TextBlock}" FontSize="15" Text="{Binding PrepositionValue}" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10 5 0 0"/>
-            <TextBlock Grid.Row="0" Grid.Column="2" Style="{DynamicResource MaterialDesignBody2TextBlock}" FontSize="15" Text="{Binding VerbValue}" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="0 5 10 0"/>
+            <StackPanel Margin="15 10" Grid.Row="0" Orientation="Horizontal">
+                <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" FontSize="19" Text="{Binding VerbValue}" VerticalAlignment="Center"/>
+                <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" FontSize="19" VerticalAlignment="Center" Text=" "></TextBlock>
+                <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" FontSize="19" Text="{Binding PrepositionValue}" VerticalAlignment="Center" Foreground="ForestGreen"/>
+            </StackPanel>
 
-            <TextBlock FontSize="25" Margin="0 -7 0 0" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="-"/>
+            <Border BorderBrush="LightGray" 
+                    BorderThickness="0.8" 
+                    Grid.ColumnSpan="3"
+                    Margin="5 0.3"
+                    Grid.Column="0"
+                    Grid.Row="2"
+                    Visibility="{Binding IsCommentVisible, Converter={converters:ReverseCollapseConverter}}"/>
 
-            <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Text="{Binding Comment}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            <Button Style="{DynamicResource MaterialDesignFlatButton}"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top"
+                    Foreground="Black"
+                    Width="15"
+                    Height="15"
+                    Padding="1"
+                    Grid.Column="2"
+                    Margin="0 4 4 0"
+                    ToolTip="Настройки аккаунта">
+
+                <materialDesign:PackIcon Kind="Delete" 
+                                         Width="15" 
+                                         Height="15"
+                                         Foreground="Brown"
+                                         HorizontalAlignment="Center"
+                                         VerticalAlignment="Center"/>
+
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="Click">
+                        <i:InvokeCommandAction Command="{Binding DeleteRelationCommand}"/>
+                        <i:InvokeCommandAction Command="{x:Static materialDesign:Flipper.FlipCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+
+            </Button>
+
         </Grid>
     </materialDesign:Card>
 </UserControl>
